--- a/AcmeApp/android/app/build.gradle
+++ b/AcmeApp/android/app/build.gradle
@@ -77,6 +77,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -137,9 +138,9 @@ android {
 }
 
 dependencies {
-    compile project(':mobile-center-crashes')
     compile project(':mobile-center-analytics')
-    compile project(':mobile-center')
+    compile project(':react-native-code-push')
+    compile project(':mobile-center-push')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
@@ -151,3 +152,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
