--- a/AcmeApp/android/settings.gradle
+++ b/AcmeApp/android/settings.gradle
@@ -1,9 +1,9 @@
 rootProject.name = 'AcmeApp'
-include ':mobile-center-crashes'
-project(':mobile-center-crashes').projectDir = new File(rootProject.projectDir, '../node_modules/mobile-center-crashes/android')
 include ':mobile-center-analytics'
 project(':mobile-center-analytics').projectDir = new File(rootProject.projectDir, '../node_modules/mobile-center-analytics/android')
-include ':mobile-center'
-project(':mobile-center').projectDir = new File(rootProject.projectDir, '../node_modules/mobile-center/android')
+include ':react-native-code-push'
+project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
+include ':mobile-center-push'
+project(':mobile-center-push').projectDir = new File(rootProject.projectDir, '../node_modules/mobile-center-push/android')
 
 include ':app'
